[gd_scene load_steps=5 format=3 uid="uid://dgueeorrglj8a"]

[ext_resource type="Texture2D" uid="uid://cwwek76eywlan" path="res://Assets/HelpScreen/background.png" id="1_35msj"]
[ext_resource type="Script" path="res://Assets/HelpScreen/Help.gd" id="1_w44i3"]
[ext_resource type="Texture2D" uid="uid://0rs6cc466vib" path="res://Assets/HelpScreen/button.png" id="2_pr4ye"]
[ext_resource type="FontFile" uid="uid://dfdbbw8l6wpii" path="res://Assets/fonts/Xolonium-Regular.ttf" id="4_msmty"]

[node name="Help" type="MarginContainer"]
script = ExtResource("1_w44i3")

[node name="HelpBackground" type="Sprite2D" parent="."]
texture = ExtResource("1_35msj")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="EscapeButton" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/EscapeButton"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_pr4ye")
ignore_texture_size = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/EscapeButton/TextureButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/EscapeButton/TextureButton/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_msmty")
theme_override_font_sizes/font_size = 24
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/Instructions"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Instructions"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="VBoxContainer/Instructions/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Instructions/VBoxContainer/Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_msmty")
theme_override_font_sizes/font_size = 29
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="AfterTitleGap" type="MarginContainer" parent="VBoxContainer/Instructions/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PageText" type="MarginContainer" parent="VBoxContainer/Instructions/VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Instructions/VBoxContainer/PageText"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_msmty")
bbcode_enabled = true
text = "Every living being has three basic attributes it needs to exist:  [color=#ff0000]BODY[/color], [color=#00ff00]SPIRIT[/color] and [color=#0000ff]MANA[/color]. Should any living being lose one of these attributes, it'll experience instability that usually will lead to its destruction. If you wish to survive, you have to manage you own life essences while attacking the one's of your opponents.

In order to do so, you have a variety of skills at your disposal represented by cards. However, skills usually come with a cost. You will need to sacrifice part of your own [color=#ff0000]BODY[/color], [color=#00ff00]SPIRIT[/color] or [color=#0000ff]MANA[/color] in order to use them"
fit_content_height = true

[node name="GapAfterPageText" type="MarginContainer" parent="VBoxContainer/Instructions/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonLine" type="HBoxContainer" parent="VBoxContainer/Instructions/VBoxContainer"]
layout_mode = 2

[node name="PrevPage" type="TextureButton" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("2_pr4ye")
ignore_texture_size = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/PrevPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -24.5
offset_right = 20.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/PrevPage/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_msmty")
theme_override_font_sizes/font_size = 40
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageCount" type="MarginContainer" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/PageCount"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/PageCount/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_msmty")
theme_override_font_sizes/font_size = 20
text = "xx / xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextPage" type="TextureButton" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("2_pr4ye")
ignore_texture_size = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/NextPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/Instructions/VBoxContainer/ButtonLine/NextPage/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_msmty")
theme_override_font_sizes/font_size = 40
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightGap" type="MarginContainer" parent="VBoxContainer/Instructions"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[connection signal="button_down" from="VBoxContainer/EscapeButton/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Instructions/VBoxContainer/ButtonLine/PrevPage" to="." method="_on_prev_page_button_down"]
[connection signal="button_down" from="VBoxContainer/Instructions/VBoxContainer/ButtonLine/NextPage" to="." method="_on_next_page_button_down"]
